Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-11.snap
---
source: src/lib/ast.rs
expression: decl.size()

---
Err(
    SaltError {
        span: 215..225,
        message: "Integer literal out of range.",
    },
)
