Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-12.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: decl.initialiser()

---
Ok(
    (
        [],
        [
            0,
            1,
        ],
    ),
)
