Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-14.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: decl.initialiser()

---
Ok(
    (
        [
            LiteralValue {
                value: 256,
                min_reg_type: Half,
            },
        ],
        [
            1,
        ],
    ),
)
