Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-16.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: decl.initialiser()

---
Ok(
    (
        [
            Lit {
                value: 4294897296,
                min_reg_type: Word,
            },
        ],
        [
            1,
        ],
    ),
)
