Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-3.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: decl.type_().dimensions()

---
Ok(
    [
        Literal(
            5,
        ),
        Literal(
            2,
        ),
        Literal(
            1,
        ),
    ],
)
