Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-4.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: decl.initialiser()

---
Ok(
    (
        [
            LiteralValue {
                value: 2,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 4,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 3,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 6,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 5,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 10,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 7,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 14,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 9,
                min_reg_type: Byte,
            },
            LiteralValue {
                value: 18,
                min_reg_type: Byte,
            },
        ],
        [
            5,
            2,
            1,
        ],
    ),
)
