Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-7.snap
---
source: simulatron-salt/src/lib/ast.rs
expression: decl.type_().dimensions()

---
Ok(
    [
        Literal(
            16,
        ),
        Literal(
            1,
        ),
    ],
)
