Crates/simulatron-salt/src/lib/snapshots/simulatron_salt__ast__tests__data-9.snap
---
source: src/lib/ast.rs
expression: decl.size()

---
Err(
    SaltError {
        span: 187..189,
        message: "Array lengths cannot be negative.",
    },
)
